--- a/css.css
+++ b/css.css
@@ -2,19 +2,18 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #bcfaa0;
+}
+
 h1 {
     text-align: center;
 }
 
 p {
-    margin: 5px;
-    padding: 25px;
-}
-
-#M1,
-#M2,
-#M3 {
-    text-align: center;
+    /*margin: 5px;
+    padding: 25px;*/
+    padding: 40px 15px 15px 15px;
 }
 
 #box {
@@ -22,115 +21,269 @@ p {
     display: inline-block;
 }
 
-#box1 {
-    background-color: rgb(128, 128, 128);
-    width: 30%;
-    float: left;
+section {
     border: 3px solid black;
+    background-color: #ce00c442;
     margin: 10px;
 }
 
-#box2 {
-    background-color: rgb(128, 128, 128);
-    width: 30%;
-    float: left;
-    border: 3px solid black;
-    margin: 10px;
+section>h2 {
+    float: right;
+    border-bottom: 3px solid black;
+    border-left: 3px solid black;
+    margin: 0;
+    width: 230px;
+    text-align: center;
+    font-style: Times;
+    font-size: 24px;
+    font-weight: bold;
+    height: 45px;
+    padding-top: 10px;
 }
 
-#box3 {
-    background-color: rgb(128, 128, 128);
-    width: 30%;
-    float: left;
-    border: 3px solid black;
-    margin: 10px;
-}
-
-#M1 {
+section.chi>h2 {
     background-color: pink;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    border-style: 3px solid blank;
-    float: right;
-    border: 1px solid black;
 }
 
-#M2 {
+section.bee>h2 {
     background-color: rgba(255, 0, 0, 0.548);
-    color: white;
-    position: relative;
-    top: 0px;
-    right: 0px;
-    border-style: 3px solid black;
-    float: right;
-    border: 1px solid black;
 }
 
-#M3 {
+section.sus>h2 {
     background-color: rgba(255, 255, 0, 0.589);
-    position: relative;
-    top: 0px;
-    right: 0px;
-    border-style: 3px solid black;
-    float: right;
-    border: 1px solid black;
 }
 
 
+/* Desktop view options */
+
+@media (min-width: 992px) {
+    .col-lg-1,
+    .col-lg-2,
+    .col-lg-3,
+    .col-lg-4,
+    .col-lg-5,
+    .col-lg-6,
+    .col-lg-7,
+    .col-lg-8,
+    .col-lg-9,
+    .col-lg-10,
+    .col-lg-11,
+    .col-lg-12 {
+        float: left;
+    }
+    .col-lg-1 {
+        width: 8.33%;
+    }
+    .col-lg-2 {
+        width: 16.66%;
+    }
+    .col-lg-3 {
+        width: 25%;
+    }
+    .col-lg-4 {
+        width: 33.33%;
+    }
+    .col-lg-5 {
+        width: 41.66%;
+    }
+    .col-lg-6 {
+        width: 50%;
+    }
+    .col-lg-7 {
+        width: 58.33%;
+    }
+    .col-lg-8 {
+        width: 66.66%;
+    }
+    .col-lg-9 {
+        width: 74.99%;
+    }
+    .col-lg-10 {
+        width: 83.33%;
+    }
+    .col-lg-11 {
+        width: 91.66%;
+    }
+    .col-lg-12 {
+        width: 100%;
+    }
+}
+
+
+/* Tablet view options */
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .col-md-1,
+    .col-md-2,
+    .col-md-3,
+    .col-md-4,
+    .col-md-5,
+    .col-md-6,
+    .col-md-7,
+    .col-md-8,
+    .col-md-9,
+    .col-md-10,
+    .col-md-11,
+    .col-md-12 {
+        float: left;
+    }
+    .col-md-1 {
+        width: 8.33%;
+    }
+    .col-md-2 {
+        width: 16.66%;
+    }
+    .col-md-3 {
+        width: 25%;
+    }
+    .col-md-4 {
+        width: 33.33%;
+    }
+    .col-md-5 {
+        width: 41.66%;
+    }
+    .col-md-6 {
+        width: 50%;
+    }
+    .col-md-7 {
+        width: 58.33%;
+    }
+    .col-md-8 {
+        width: 66.66%;
+    }
+    .col-md-9 {
+        width: 74.99%;
+    }
+    .col-md-10 {
+        width: 83.33%;
+    }
+    .col-md-11 {
+        width: 91.66%;
+    }
+    .col-md-12 {
+        width: 100%;
+    }
+}
+
+
+/* Mobile view options */
+
+@media (max-width: 767px) {
+    .col-sm-1,
+    .col-sm-2,
+    .col-sm-3,
+    .col-sm-4,
+    .col-sm-5,
+    .col-sm-6,
+    .col-sm-7,
+    .col-sm-8,
+    .col-sm-9,
+    .col-sm-10,
+    .col-sm-11,
+    .col-sm-12 {
+        float: left;
+    }
+    .col-sm-1 {
+        width: 8.33%;
+    }
+    .col-sm-2 {
+        width: 16.66%;
+    }
+    .col-sm-3 {
+        width: 25%;
+    }
+    .col-sm-4 {
+        width: 33.33%;
+    }
+    .col-sm-5 {
+        width: 41.66%;
+    }
+    .col-sm-6 {
+        width: 50%;
+    }
+    .col-sm-7 {
+        width: 58.33%;
+    }
+    .col-sm-8 {
+        width: 66.66%;
+    }
+    .col-sm-9 {
+        width: 74.99%;
+    }
+    .col-sm-10 {
+        width: 83.33%;
+    }
+    .col-sm-11 {
+        width: 91.66%;
+    }
+    .col-sm-12 {
+        width: 100%;
+    }
+}
+
+
+/**Old Code
 /****Desktop Device*****/
 
+
+/**
 @media(min-width: 992px) {
-    #box1,
-    #box2,
-    #box3 {
-        background-color: rgb(128, 128, 128);
-        width: 30%;
-        float: left;
-        border: 3px solid black;
-    }
+#box1,
+#box2,
+#box3 {
+background-color: rgb(128, 128, 128);
+width: 30%;
+float: left;
+border: 3px solid black;
+}
 }
 
 
 /****Tablet Device*****/
 
+
+/**
 @media(min-width: 768px) and (max-width:991px) {
-    #box1,
-    #box2 {
-        background-color: rgb(128, 128, 128);
-        width: 25%;
-        border: 3px solid black;
-    }
-    #box3 {
-        background-color: rgb(128, 128, 128);
-        width: 50%;
-        border: 3px solid black;
-    }
+#box1,
+#box2 {
+background-color: rgb(128, 128, 128);
+width: 25%;
+border: 3px solid black;
 }
+#box3 {
+background-color: rgb(128, 128, 128);
+width: 50%;
+border: 3px solid black;
+}
+}
+**/
 
 
 /****Mobile Device*****/
 
+
+/**
 @media(max-width: 767px) {
-    #box1 {
-        background-color: rgb(128, 128, 128);
-        width: 100%;
-        float: left;
-        border: 3px solid black;
-        margin: 10px;
-    }
-    #box2 {
-        background-color: rgb(128, 128, 128);
-        width: 100%;
-        float: left;
-        border: 3px solid black;
-        margin: 10px;
-    }
-    #box3 {
-        background-color: rgb(128, 128, 128);
-        width: 100%;
-        float: left;
-        border: 3px solid black;
-        margin: 10px;
-    }
+#box1 {
+background-color: rgb(128, 128, 128);
+width: 100%;
+float: left;
+border: 3px solid black;
+margin: 10px;
 }
+#box2 {
+background-color: rgb(128, 128, 128);
+width: 100%;
+float: left;
+border: 3px solid black;
+margin: 10px;
+}
+#box3 {
+background-color: rgb(128, 128, 128);
+width: 100%;
+float: left;
+border: 3px solid black;
+margin: 10px;
+}
+}
+**/
